--- a/index.html
+++ b/index.html
@@ -130,15 +130,11 @@
         <section>
           <h2>Tags</h2>
           <div class="badge">Suporte Técnico</div>
-          <div class="badge" style="margin-left:6px">Instalação & Manutenção</div>
+          <div class="badge" style="margin-left:6px">Instalação e Manutenção</div>
         </section>
 
       </aside>
     </main>
-
-    <footer>
-  
-    </footer>
   </article>
 </body>
 </html>
